[tool.poetry]
name = "src" #needs to match the folder name
version = "0.1.0"
description = ""
authors = ["alexander baumann <baumannalexj@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/baumannalexj/twitter-wednesday-bot"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
requests-oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[package]
include = ["src/**"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
